fix(Dialog, Drawer, ScrollView): handle content movement when scrollbar appears and add `scrollbarGutter` property (#7862)

--- a/packages/dnb-eufemia/src/fragments/scroll-view/style/dnb-scroll-view.scss
+++ b/packages/dnb-eufemia/src/fragments/scroll-view/style/dnb-scroll-view.scss
@@ -13,6 +13,10 @@
   // Ensure the user still can scroll a ancestor scrollarea (body)
   overscroll-behavior: auto;
 
+  &--scrollbar-gutter-stable {
+    scrollbar-gutter: stable;
+  }
+
   // interactive prop
   &[tabindex='0'] {
     &:focus {
